--- a/Identity.Web/bin/Identity.Web.dll.config
+++ b/Identity.Web/bin/Identity.Web.dll.config
@@ -6,7 +6,7 @@
 <configuration>
   
   <connectionStrings>
-    <add name="DatabaseConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=identitydb;Trusted_Connection=True;MultipleActiveResultSets=True;" />
+    <add name="DatabaseConnection" providerName="System.Data.SqlClient" connectionString="Data Source=BERENICE\ISAAC;Initial Catalog=GoodMovies;Trusted_Connection=True;MultipleActiveResultSets=True;" />
   </connectionStrings>
 
   <appSettings>
