--- a/flix/flix.csproj
+++ b/flix/flix.csproj
@@ -149,21 +149,24 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\GraficasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\IndexController.cs" />
     <Compile Include="Controllers\LandingController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Actor.cs" />
-    <Compile Include="Models\Categorias.cs" />
+    <Compile Include="Models\ConnectionDB.cs" />
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\Director.cs" />
     <Compile Include="Models\Genre.cs" />
+    <Compile Include="Models\IndexViewModel.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\Poster.cs" />
     <Compile Include="Models\Review.cs" />
     <Compile Include="Models\Trailer.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\User_Genre.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -225,6 +228,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Index\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
