--- a/flix/bin/flix.dll.config
+++ b/flix/bin/flix.dll.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <!-- <add name="DBConnection" connectionString="Server=DESKTOP-BRLL0NI;database=ModalLogin;integrated security=yes" providerName="System.Data.SqlClient"/>-->
-   <add name="DBConnection" connectionString="Server=BERENICE\ISAACI;database=GoodMovie;integrated security=yes" providerName="System.Data.SqlClient" />
+   <add name="DBConnection" connectionString="Server=BERENICE\ISAAC;database=GoodMovie;integrated security=yes" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
