Vista de log in

--- a/flix/flix.csproj
+++ b/flix/flix.csproj
@@ -216,6 +216,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\image.jpg" />
     <Content Include="Content\memes2.png" />
     <Content Include="Content\single.js" />
     <Content Include="Content\slider.css" />
