--- a/flix/flix.csproj
+++ b/flix/flix.csproj
@@ -160,7 +160,9 @@
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\Director.cs" />
     <Compile Include="Models\Genre.cs" />
+    <Compile Include="Models\GetLastReviews.cs" />
     <Compile Include="Models\HomeViewModel.cs" />
+    <Compile Include="Models\MostPopularMovie.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\perfil.cs" />
     <Compile Include="Models\Poster.cs" />
@@ -321,6 +323,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Resources\Images\" />
     <Folder Include="Resources\Libraries\NewFolder1\" />
     <Folder Include="Resources\Library\" />
     <Folder Include="Views\Index\" />
