--- a/flix/flix.csproj
+++ b/flix/flix.csproj
@@ -49,11 +49,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=2.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -96,8 +96,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.2\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
@@ -108,12 +108,12 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+    <Reference Include="System.Web.Http, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.2\lib\net45\System.Web.Http.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Web.Http.WebHost, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+    <Reference Include="System.Web.Http.WebHost, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.2\lib\net45\System.Web.Http.WebHost.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Xml.Linq" />
@@ -199,6 +199,7 @@
     <Compile Include="Models\Director.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\GetLastReviews.cs" />
+    <Compile Include="Models\GetTopUserReviewers.cs" />
     <Compile Include="Models\HomeViewModel.cs" />
     <Compile Include="Models\MostPopularMovie.cs" />
     <Compile Include="Models\Movie.cs" />
@@ -219,6 +220,55 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\image.jpg" />
+    <Content Include="Content\Images\Users\User_%281%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2810%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2811%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2812%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2813%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2814%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2815%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2816%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2817%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2818%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2819%29.jpg" />
+    <Content Include="Content\Images\Users\User_%282%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2820%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2821%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2822%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2823%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2824%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2825%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2826%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2827%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2828%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2829%29.jpg" />
+    <Content Include="Content\Images\Users\User_%283%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2830%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2831%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2832%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2833%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2834%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2835%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2836%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2837%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2838%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2839%29.jpg" />
+    <Content Include="Content\Images\Users\User_%284%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2840%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2841%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2842%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2843%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2844%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2845%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2846%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2847%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2848%29.jpg" />
+    <Content Include="Content\Images\Users\User_%2849%29.jpg" />
+    <Content Include="Content\Images\Users\User_%285%29.jpg" />
+    <Content Include="Content\Images\Users\User_%286%29.jpg" />
+    <Content Include="Content\Images\Users\User_%287%29.jpg" />
+    <Content Include="Content\Images\Users\User_%288%29.jpg" />
+    <Content Include="Content\Images\Users\User_%289%29.jpg" />
     <Content Include="Content\memes2.png" />
     <Content Include="Content\single.js" />
     <Content Include="Content\slider.css" />
@@ -256,6 +306,106 @@
       <DependentUpon>Login.edmx</DependentUpon>
       <LastGenOutput>Login.cs</LastGenOutput>
     </Content>
+    <Content Include="Content\Images\Actors\Actor_%281%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2810%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2811%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2812%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2813%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2814%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2815%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2816%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2817%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2818%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2819%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%282%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2820%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2821%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2822%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2823%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2824%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2825%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2826%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2827%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2828%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2829%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%283%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2830%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2831%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2832%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2833%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2834%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2835%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2836%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2837%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2838%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2839%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%284%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2840%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2841%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2842%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2843%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2844%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2845%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2846%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2847%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2848%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2849%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%285%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%2850%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%286%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%287%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%288%29.jpg" />
+    <Content Include="Content\Images\Actors\Actor_%289%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%281%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2810%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2811%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2812%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2813%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2814%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2815%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2816%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2817%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2818%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2819%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%282%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2820%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2821%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2822%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2823%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2824%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2825%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2826%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2827%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2828%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2829%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%283%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2830%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2831%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2832%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2833%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2834%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2835%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2836%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2837%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2838%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2839%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%284%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2840%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2841%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2842%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2843%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2844%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2845%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2846%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2847%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2848%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2849%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%285%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%2850%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%286%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%287%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%288%29.jpg" />
+    <Content Include="Content\Images\Movies\Movie_%289%29.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
@@ -384,7 +534,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Resources\Images\" />
     <Folder Include="Resources\Libraries\NewFolder1\" />
     <Folder Include="Resources\Library\" />
   </ItemGroup>
