--- a/flix/flix.csproj
+++ b/flix/flix.csproj
@@ -195,21 +195,32 @@
       <DependentUpon>Login.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\Actor.cs" />
+    <Compile Include="Models\ActorDBHelper.cs" />
     <Compile Include="Models\ConnectionDB.cs" />
+    <Compile Include="Models\ConutryDBHelper.cs" />
     <Compile Include="Models\Country.cs" />
+    <Compile Include="Models\DBHelper.cs" />
     <Compile Include="Models\Director.cs" />
+    <Compile Include="Models\DirectorDBHelper.cs" />
     <Compile Include="Models\Genre.cs" />
+    <Compile Include="Models\GenreDBHelper.cs" />
     <Compile Include="Models\GetLastReviews.cs" />
     <Compile Include="Models\GetTopUserReviewers.cs" />
     <Compile Include="Models\HomeViewModel.cs" />
     <Compile Include="Models\MostPopularMovie.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\MovieDBHelper.cs" />
     <Compile Include="Models\perfil.cs" />
+    <Compile Include="Models\PosterDBHelper.cs" />
     <Compile Include="Models\Poster.cs" />
     <Compile Include="Models\Review.cs" />
+    <Compile Include="Models\ReviewDBHelper.cs" />
     <Compile Include="Models\Trailer.cs" />
+    <Compile Include="Models\TrailerDBHelper.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="Models\User_Genre.cs" />
+    <Compile Include="Models\UserDBHelper.cs" />
+    <Compile Include="Models\UserGenreDBHelper.cs" />
+    <Compile Include="Models\UserGenre.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs">
       <DependentUpon>Login.tt</DependentUpon>
@@ -298,6 +309,7 @@
     <Content Include="Login.edmx.diagram">
       <DependentUpon>Login.edmx</DependentUpon>
     </Content>
+    <Content Include="ClassDiagram1.cd" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Login.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
