--- a/flix/Web.config
+++ b/flix/Web.config
@@ -12,6 +12,7 @@
     <add name="DBConnection" connectionString="Server=DESKTOP-BRLL0NI;database=GoodMovie;integrated security=yes" providerName="System.Data.SqlClient" />
     <!--<add name="DBConnection" connectionString="Server=BERENICE\ISAAC;database=GoodMovie;integrated security=yes" providerName="System.Data.SqlClient" />-->
     <add name="GoodMovie" connectionString="metadata=res://*/Login.csdl|res://*/Login.ssdl|res://*/Login.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-BRLL0NI;initial catalog=GoodMovie;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="GoodMovieEntities" connectionString="metadata=res://*/Login.csdl|res://*/Login.ssdl|res://*/Login.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-BRLL0NI;initial catalog=GoodMovie;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -64,12 +65,13 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
