+Mongo dataset in View Review Review +Searchbar with conditions by options. +view Profile with dataset +View Poster fixed (there was a few with problems to display poster)

--- a/flix/flix.csproj
+++ b/flix/flix.csproj
@@ -189,11 +189,26 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LandingController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\PerfilController.cs" />
     <Compile Include="Controllers\ReviewController.cs" />
-    <Compile Include="Controllers\UserLController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Login.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Login.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Login.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Login.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Login.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\Actor.cs" />
     <Compile Include="Models\ActorDBHelper.cs" />
@@ -208,8 +223,10 @@
     <Compile Include="Models\GetLastReviews.cs" />
     <Compile Include="Models\GetTopUserReviewers.cs" />
     <Compile Include="Models\HomeViewModel.cs" />
-    <Compile Include="Models\MongoMovieDbHelper.cs" />
+    <Compile Include="Models\Mongo\MongoGenre.cs" />
+    <Compile Include="Models\Mongo\MongoMovieDbHelper.cs" />
     <Compile Include="Models\Mongo\MongoMovie.cs" />
+    <Compile Include="Models\Mongo\MongoReview.cs" />
     <Compile Include="Models\MostPopularMovie.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Models\MovieDBHelper.cs" />
@@ -218,9 +235,11 @@
     <Compile Include="Models\MovieList.cs" />
     <Compile Include="Models\MovieActor.cs" />
     <Compile Include="Models\MovieActorDBHelper.cs" />
+    <Compile Include="Models\MovieReviewsModel.cs" />
     <Compile Include="Models\Perfil.cs" />
     <Compile Include="Models\Poster.cs" />
     <Compile Include="Models\PosterDBHelper.cs" />
+    <Compile Include="Models\ProfileViewModel.cs" />
     <Compile Include="Models\Review.cs" />
     <Compile Include="Models\ReviewDBHelper.cs" />
     <Compile Include="Models\ReviewList.cs" />
@@ -232,8 +251,10 @@
     <Compile Include="Models\UserDBHelper.cs" />
     <Compile Include="Models\UserGenre.cs" />
     <Compile Include="Models\UserGenreDBHelper.cs" />
-    <Compile Include="Models\UserL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs">
+      <DependentUpon>Login.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -409,7 +430,24 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <EntityDeploy Include="Login.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Login.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Login.edmx.diagram">
+      <DependentUpon>Login.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
+    <Content Include="Login.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Login.edmx</DependentUpon>
+      <LastGenOutput>Login.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Login.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Login.edmx</DependentUpon>
+      <LastGenOutput>Login.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
@@ -533,15 +571,18 @@
     <Content Include="Views\Perfil\Perfil.cshtml" />
     <Content Include="Views\User\publicar.cshtml" />
     <Content Include="Views\Review\Review.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\UserDashBoard.cshtml" />
-    <Content Include="Views\Admin\Admin.cshtml" />
-    <Content Include="Views\UserL\UserL.cshtml" />
+    <Content Include="Views\Login\Login.cshtml" />
+    <Content Include="Views\Login\logout.cshtml" />
+    <Content Include="Views\Login\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Controllers\Api\" />
     <Folder Include="Resources\Libraries\NewFolder1\" />
     <Folder Include="Resources\Library\" />
+    <Folder Include="Views\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
