Cambios en review

--- a/flix/Web.config
+++ b/flix/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DBConnection" connectionString="Server=DESKTOP-BRLL0NI;database=GoodMovie;integrated security=yes" providerName="System.Data.SqlClient" />
     <!--<add name="DBConnection" connectionString="Server=BERENICE\ISAAC;database=GoodMovie;integrated security=yes" providerName="System.Data.SqlClient" />-->
-    <add name="GoodMovie" connectionString="metadata=res://*/Login.csdl|res://*/Login.ssdl|res://*/Login.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-BRLL0NI;initial catalog=GoodMovie;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -20,6 +20,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On">
+      
+    </customErrors>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
