--- a/flix/flix.csproj
+++ b/flix/flix.csproj
@@ -416,6 +416,7 @@
     <Content Include="Content\Images\Users\User_%288%29.jpg" />
     <Content Include="Content\Images\Users\User_%289%29.jpg" />
     <Content Include="Content\memes2.png" />
+    <Content Include="Content\robot-404.png" />
     <Content Include="Content\single.js" />
     <Content Include="Content\slider.css" />
     <Content Include="Content\starw.jpg" />
